--- a/exercises/solutions/08_file_handling_exercise.ipynb
+++ b/exercises/solutions/08_file_handling_exercise.ipynb
@@ -205,18 +205,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Adam Gustafsson 25\\n', 'Emil Johansson 23\\n', 'Sven Erik Karlsson 13\\n', 'Ove Karlsten 41\\n', 'Emma Boden 32\\n', 'Ida Håkansson 23\\n', 'Ella Ester 41\\n', 'Hanna Karlsson 23 \\n', 'Johan Johansson 42\\n', 'Sven Erik Lundin 39\\n', 'Björn Björnsson 39\\n', 'Karl Karlsson 32\\n', 'Bose Bosseson 32\\n', 'Håkan Håkanson 24\\n', 'Jonas Jonasson 31\\n', 'Erik Eriksson 31\\n', 'Gore Bord 55\\n', 'Jakob Kallander 65\\n', 'Fredrika Ulven 10']\n",
-            "<class 'list'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "path = '../../data/test_result.txt'\n",
         "\n",
@@ -237,17 +228,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Adam Gustafsson 25\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# börja först med att försöka rensa ETT namn för att se att det funkar\n",
         "# när du hittat en metod som funkar så applicera den därefter på alla\n",
@@ -261,17 +244,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Adam Gustafsson 25', 'Emil Johansson 23', 'Sven Erik Karlsson 13', 'Ove Karlsten 41', 'Emma Boden 32', 'Ida Håkansson 23', 'Ella Ester 41', 'Hanna Karlsson 23 ', 'Johan Johansson 42', 'Sven Erik Lundin 39', 'Björn Björnsson 39', 'Karl Karlsson 32', 'Bose Bosseson 32', 'Håkan Håkanson 24', 'Jonas Jonasson 31', 'Erik Eriksson 31', 'Gore Bord 55', 'Jakob Kallander 65', 'Fredrika Ulven 10']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "cleaned_contents = [name.replace('\\n', '') for name in contents]\n",
         "print(cleaned_contents)"
@@ -286,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -296,20 +271,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Sven', 'Erik', 'Lundin', '39']\n",
-            "['Sven', 'Erik', 'Lundin']\n",
-            "Sven Erik Lundin\n",
-            "39\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "deltagare = 'Sven Erik Lundin 39'\n",
         "deltagare_splittad = deltagare.split()\n",
@@ -334,18 +298,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Adam Gustafsson', 'Emil Johansson', 'Sven Erik Karlsson', 'Ove Karlsten', 'Emma Boden', 'Ida Håkansson', 'Ella Ester', 'Hanna Karlsson', 'Johan Johansson', 'Sven Erik Lundin', 'Björn Björnsson', 'Karl Karlsson', 'Bose Bosseson', 'Håkan Håkanson', 'Jonas Jonasson', 'Erik Eriksson', 'Gore Bord', 'Jakob Kallander', 'Fredrika Ulven']\n",
-            "['25', '23', '13', '41', '32', '23', '41', '23', '42', '39', '39', '32', '32', '24', '31', '31', '55', '65', '10']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "alla_namn = []\n",
         "alla_poäng = []\n",
@@ -372,17 +327,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Adam Gustafsson', 'Björn Björnsson', 'Bose Bosseson', 'Ella Ester', 'Emil Johansson', 'Emma Boden', 'Erik Eriksson', 'Fredrika Ulven', 'Gore Bord', 'Hanna Karlsson', 'Håkan Håkanson', 'Ida Håkansson', 'Jakob Kallander', 'Johan Johansson', 'Jonas Jonasson', 'Karl Karlsson', 'Ove Karlsten', 'Sven Erik Karlsson', 'Sven Erik Lundin']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "sorterade_namn = sorted(alla_namn)\n",
         "print(sorterade_namn)"
@@ -390,35 +337,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Adam Gustafsson 25\n",
-            "Björn Björnsson 39\n",
-            "Bose Bosseson 32\n",
-            "Ella Ester 41\n",
-            "Emil Johansson 23\n",
-            "Emma Boden 32\n",
-            "Erik Eriksson 31\n",
-            "Fredrika Ulven 10\n",
-            "Gore Bord 55\n",
-            "Hanna Karlsson 23\n",
-            "Håkan Håkanson 24\n",
-            "Ida Håkansson 23\n",
-            "Jakob Kallander 65\n",
-            "Johan Johansson 42\n",
-            "Jonas Jonasson 31\n",
-            "Karl Karlsson 32\n",
-            "Ove Karlsten 41\n",
-            "Sven Erik Karlsson 13\n",
-            "Sven Erik Lundin 39\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for namn in sorterade_namn:\n",
         "\n",
@@ -447,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -465,6 +386,312 @@
         "        to_write = f'{namn} {poäng}\\n'\n",
         "        \n",
         "        file.write(to_write)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "## 3. Text cleanup (**)\n",
+        "read in the file quotes.txt (located in the data folder of the course repo) in Python.\n",
+        "\n",
+        "&nbsp; a) &nbsp; Print out the text in the terminal (*)\n",
+        "\n",
+        "&nbsp; b) &nbsp; In a new file write the information contained in quotes.txt, in the following format (*)\n",
+        "\n",
+        "name_1\n",
+        "\n",
+        "   -- full_quote1\n",
+        "\n",
+        "name_2\n",
+        "\n",
+        "   -- full_quote2\n",
+        "\n",
+        "...\n",
+        "\n",
+        "name_N\n",
+        "\n",
+        "   -- full_quoteN\n",
+        "\n",
+        "**All the quotes must be cleaned! In other words, remove all junk space contained between the words.**\n",
+        "\n",
+        "<details>\n",
+        "\n",
+        "<summary>Hint </summary>\n",
+        "\n",
+        "Open the file using option \"r\" for read and open the file using option \"a\" for append.\n",
+        "\n",
+        "</details>\n",
+        "<br>\n",
+        "<details>\n",
+        "\n",
+        "<summary>Answer </summary>\n",
+        "\n",
+        "```\n",
+        "Albert Einstein\n",
+        "--If we knew what it was we were doing, it would not be called research, would it?\n",
+        "\n",
+        "Terry Pratchett\n",
+        "--Time is a drug. Too much of it kills you.\n",
+        "\n",
+        "Niels Bohr\n",
+        "--An expert is a person who has made all the mistakes that can be made in a very narrow field.\n",
+        "\n",
+        "Albert Einstein \n",
+        "--Everything must be made as simple as possible. But not simpler.     \n",
+        "\n",
+        "Marie  Curie\n",
+        "--Nothing in life is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less.  \n",
+        "\n",
+        "Isaac Newton\n",
+        "--If I have seen further it is by standing on the shoulders of Giants.\n",
+        "\n",
+        "```\n",
+        "\n",
+        "</details>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Delmoment 1: läs in filen**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 102,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n',\n",
+              " '\\n',\n",
+              " 'Time is a drug. Too       much of it kills you.  -  Terry Pratchett\\n',\n",
+              " '\\n',\n",
+              " '\\n',\n",
+              " ' An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\\n',\n",
+              " '\\n',\n",
+              " '   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \\n',\n",
+              " '\\n',\n",
+              " '\\n',\n",
+              " '  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \\n',\n",
+              " '\\n',\n",
+              " 'If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton']"
+            ]
+          },
+          "execution_count": 102,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "path = '../../data/quotes.txt'\n",
+        "\n",
+        "with open(path, 'r') as file:\n",
+        "\n",
+        "    contents = file.readlines()\n",
+        "\n",
+        "contents"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Delmoment 2: ta bart onödiga element i vår lista contents (specifict de som är like med \\n)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 108,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n',\n",
+              " 'Time is a drug. Too       much of it kills you.  -  Terry Pratchett\\n',\n",
+              " ' An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\\n',\n",
+              " '   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \\n',\n",
+              " '  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \\n',\n",
+              " 'If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton']"
+            ]
+          },
+          "execution_count": 108,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "contents = [x for x in contents if x != '\\n']\n",
+        "contents"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Delmoment 3: Hitta en metod som funkar för ETT citat i taget, och applicera den sedan för alla**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 110,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n'"
+            ]
+          },
+          "execution_count": 110,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "content = contents[0]\n",
+        "content"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 129,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Albert Einstein\n",
+            "--If we knew what it was we were doing, it would not be called research, would it?\n"
+          ]
+        }
+      ],
+      "source": [
+        "splitted = content.split('-')\n",
+        "\n",
+        "quote = splitted[0]\n",
+        "name = splitted[1]\n",
+        "\n",
+        "cleaned_quote = ' '.join(quote.strip().split())\n",
+        "cleaned_name = name.strip()\n",
+        "\n",
+        "print(cleaned_name)\n",
+        "print(f'--{cleaned_quote}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Delmoment 4: nu när vi har en metod som verkar fungera, gör en for-loop och applicera den på alla citat**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 130,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n',\n",
+              " 'Time is a drug. Too       much of it kills you.  -  Terry Pratchett\\n',\n",
+              " ' An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\\n',\n",
+              " '   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \\n',\n",
+              " '  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \\n',\n",
+              " 'If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton']"
+            ]
+          },
+          "execution_count": 130,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "contents"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 132,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Albert Einstein\n",
+            "--If we knew what it was we were doing, it would not be called research, would it?\n",
+            "\n",
+            "Terry Pratchett\n",
+            "--Time is a drug. Too much of it kills you.\n",
+            "\n",
+            "Niels Bohr\n",
+            "--An expert is a person who has made all the mistakes that can be made in a very narrow field\n",
+            "\n",
+            "Albert Einstein\n",
+            "--Everything must be made as simple as possible. But not simpler.\n",
+            "\n",
+            "Marie  Curie\n",
+            "--Nothing in life is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less.\n",
+            "\n",
+            "Isaac Newton\n",
+            "--If I have seen further it is by standing on the shoulders of Giants.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "for content in contents:\n",
+        "\n",
+        "    splitted = content.split('-')\n",
+        "\n",
+        "    quote = splitted[0]\n",
+        "    name = splitted[1]\n",
+        "\n",
+        "    cleaned_quote = ' '.join(quote.strip().split())\n",
+        "    cleaned_name = name.strip()\n",
+        "\n",
+        "    print(cleaned_name)\n",
+        "    print(f'--{cleaned_quote}')\n",
+        "    print()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Delmoment 5: Nu när vi har desired output, se till att skriva in det i en ny textfilen också**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 133,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "path = 'resulat.txt'\n",
+        "\n",
+        "with open(path, 'w') as file:\n",
+        "\n",
+        "    for content in contents:\n",
+        "\n",
+        "        splitted = content.split('-')\n",
+        "\n",
+        "        quote = splitted[0]\n",
+        "        name = splitted[1]\n",
+        "\n",
+        "        cleaned_quote = ' '.join(quote.strip().split())\n",
+        "        cleaned_name = name.strip()\n",
+        "\n",
+        "        file.write(f'{cleaned_name}\\n')\n",
+        "        file.write(f'--{cleaned_quote}\\n\\n')\n"
       ]
     }
   ],
