--- a/exercises/solutions/08_file_handling_solutions.ipynb
+++ b/exercises/solutions/08_file_handling_solutions.ipynb
@@ -461,32 +461,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n',\n",
-              " '\\n',\n",
-              " 'Time is a drug. Too       much of it kills you.  -  Terry Pratchett\\n',\n",
-              " '\\n',\n",
-              " '\\n',\n",
-              " ' An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\\n',\n",
-              " '\\n',\n",
-              " '   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \\n',\n",
-              " '\\n',\n",
-              " '\\n',\n",
-              " '  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \\n',\n",
-              " '\\n',\n",
-              " 'If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton']"
-            ]
-          },
-          "execution_count": 102,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "path = '../../data/quotes.txt'\n",
         "\n",
@@ -506,25 +483,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n',\n",
-              " 'Time is a drug. Too       much of it kills you.  -  Terry Pratchett\\n',\n",
-              " ' An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\\n',\n",
-              " '   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \\n',\n",
-              " '  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \\n',\n",
-              " 'If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton']"
-            ]
-          },
-          "execution_count": 108,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "contents = [x for x in contents if x != '\\n']\n",
         "contents"
@@ -539,20 +500,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n'"
-            ]
-          },
-          "execution_count": 110,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "content = contents[0]\n",
         "content"
@@ -560,18 +510,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Albert Einstein\n",
-            "--If we knew what it was we were doing, it would not be called research, would it?\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "splitted = content.split('-')\n",
         "\n",
@@ -594,59 +535,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\\n',\n",
-              " 'Time is a drug. Too       much of it kills you.  -  Terry Pratchett\\n',\n",
-              " ' An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\\n',\n",
-              " '   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \\n',\n",
-              " '  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \\n',\n",
-              " 'If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton']"
-            ]
-          },
-          "execution_count": 130,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "contents"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Albert Einstein\n",
-            "--If we knew what it was we were doing, it would not be called research, would it?\n",
-            "\n",
-            "Terry Pratchett\n",
-            "--Time is a drug. Too much of it kills you.\n",
-            "\n",
-            "Niels Bohr\n",
-            "--An expert is a person who has made all the mistakes that can be made in a very narrow field\n",
-            "\n",
-            "Albert Einstein\n",
-            "--Everything must be made as simple as possible. But not simpler.\n",
-            "\n",
-            "Marie  Curie\n",
-            "--Nothing in life is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less.\n",
-            "\n",
-            "Isaac Newton\n",
-            "--If I have seen further it is by standing on the shoulders of Giants.\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "for content in contents:\n",
         "\n",
@@ -672,7 +572,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -691,7 +591,7 @@
         "        cleaned_name = name.strip()\n",
         "\n",
         "        file.write(f'{cleaned_name}\\n')\n",
-        "        file.write(f'--{cleaned_quote}\\n\\n')\n"
+        "        file.write(f'--{cleaned_quote}\\n\\n')"
       ]
     }
   ],
