--- a/exercises/solutions/09_dictionary_solutions.ipynb
+++ b/exercises/solutions/09_dictionary_solutions.ipynb
@@ -246,6 +246,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Delmomoment 1: läs in filen, kontrollera contents**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {},
