--- a/code_alongs/L10_numpy.ipynb
+++ b/code_alongs/L10_numpy.ipynb
@@ -1059,18 +1059,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "6.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "array = np.array([2,4,6,8,10])\n",
     "\n",
@@ -1082,11 +1073,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PRESTANDA BOOST att uföra beräkningar samt generera tal i Numpy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "number_of_rolls = 1000000000\n",
+    "\n",
+    "results = np.random.randint(1,6,number_of_rolls)\n",
+    "\n",
+    "print(results)\n",
+    "print(len(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mycket snabbare!\n",
+    "\n",
+    "np.random.randint(1,6, number_of_rolls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# långsamt....\n",
+    "\n",
+    "[random.randint(1,6) for i in range(number_of_rolls)]"
+   ]
   }
  ],
  "metadata": {
