--- a/code_alongs/L11_OOP_basics.ipynb
+++ b/code_alongs/L11_OOP_basics.ipynb
@@ -1150,6 +1150,92 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "**svar:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Varor:\n",
+    "\n",
+    "    '''Denna klass beskriver och hanterar varor som säljs i vår butik'''\n",
+    "\n",
+    "    def __init__(self, namn, pris, varumärke, utgångsdatum, saldo):\n",
+    "    \n",
+    "        self.namn = namn\n",
+    "        self.pris = pris\n",
+    "        self.varumärke = varumärke\n",
+    "        self.utgångsdatum = utgångsdatum\n",
+    "        self.__saldo = saldo\n",
+    "\n",
+    "    # applies discount to price corresponding to the argument percentage (in decimal)\n",
+    "    def discount(self, percentage):\n",
+    "\n",
+    "        self.pris = self.pris*(1-percentage)\n",
+    "\n",
+    "    # subtracts the amount just bought from the current value of the stock\n",
+    "    # if the customer tries to buy more than available, push back against the customer instead\n",
+    "    def buy(self, amount):\n",
+    "    \n",
+    "        if amount <= self.stock:\n",
+    "            self.__saldo -= amount    \n",
+    "        else:\n",
+    "            print(\"Sorry, we only have {self.__stock} {self.name}s available\")\n",
+    "\n",
+    "    @property\n",
+    "    def saldo(self):\n",
+    "        return self.__saldo\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'''Information:\n",
+    "                   namn         : {self.namn}\n",
+    "                   pris         : {self.pris}\n",
+    "                   varumärke    : {self.varumärke}\n",
+    "                   utgångsdatum : {self.utgångsdatum}\n",
+    "                   saldo        : {self.saldo}\n",
+    "                '''\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "banan = Varor('Banan', 5, 'Chichquita', '2023-10-18', 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method discount in module __main__:\n",
+      "\n",
+      "discount(percentage) method of __main__.Varor instance\n",
+      "    Reduces the price by given percentage (in decimal)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(banan.discount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
