--- a/code_alongs/L11_OOP_basics.ipynb
+++ b/code_alongs/L11_OOP_basics.ipynb
@@ -1156,87 +1156,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Varor:\n",
+    "class Wares:\n",
     "\n",
-    "    '''Denna klass beskriver och hanterar varor som säljs i vår butik'''\n",
+    "    '''This class describes and handles wares that are sold in our store'''\n",
     "\n",
-    "    def __init__(self, namn, pris, varumärke, utgångsdatum, saldo):\n",
+    "    def __init__(self, name, price, brand, expiry, stock):\n",
     "    \n",
-    "        self.namn = namn\n",
-    "        self.pris = pris\n",
-    "        self.varumärke = varumärke\n",
-    "        self.utgångsdatum = utgångsdatum\n",
-    "        self.__saldo = saldo\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.brand = brand\n",
+    "        self.expiry = expiry\n",
+    "        self.__stock = stock\n",
     "\n",
     "    # applies discount to price corresponding to the argument percentage (in decimal)\n",
     "    def discount(self, percentage):\n",
     "\n",
-    "        self.pris = self.pris*(1-percentage)\n",
+    "        self.price *= (1-percentage)\n",
     "\n",
     "    # subtracts the amount just bought from the current value of the stock\n",
     "    # if the customer tries to buy more than available, push back against the customer instead\n",
-    "    def buy(self, amount):\n",
+    "    def purchase(self, amount):\n",
     "    \n",
     "        if amount <= self.stock:\n",
-    "            self.__saldo -= amount    \n",
+    "            self.__stock -= amount    \n",
     "        else:\n",
-    "            print(\"Sorry, we only have {self.__stock} {self.name}s available\")\n",
+    "            print(f\"Sorry, but we're unable to proceed with your purchase of {amount} {self.name}'s - we have {self.__stock} available.\")\n",
     "\n",
     "    @property\n",
-    "    def saldo(self):\n",
-    "        return self.__saldo\n",
+    "    def stock(self):\n",
+    "        return self.__stock\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f'''Information:\n",
-    "                   namn         : {self.namn}\n",
-    "                   pris         : {self.pris}\n",
-    "                   varumärke    : {self.varumärke}\n",
-    "                   utgångsdatum : {self.utgångsdatum}\n",
-    "                   saldo        : {self.saldo}\n",
-    "                '''\n",
-    "\n"
+    "                   name         : {self.name}\n",
+    "                   price        : {self.price}\n",
+    "                   brand        : {self.brand}\n",
+    "                   expiry       : {self.expiry}\n",
+    "                   stock        : {self.stock}\n",
+    "                '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
-    "banan = Varor('Banan', 5, 'Chichquita', '2023-10-18', 200)"
+    "banana = Wares('banana', 5, 'Chichquita', '2023-10-18', 200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on method discount in module __main__:\n",
-      "\n",
-      "discount(percentage) method of __main__.Varor instance\n",
-      "    Reduces the price by given percentage (in decimal)\n",
-      "\n"
+      "Information:\n",
+      "                   name         : banana\n",
+      "                   price        : 5\n",
+      "                   brand        : Chichquita\n",
+      "                   expiry       : 2023-10-18\n",
+      "                   stock        : 200\n",
+      "                \n"
      ]
     }
    ],
    "source": [
-    "help(banan.discount)"
+    "print(banana)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
