--- a/code_alongs/L11_OOP_basics.ipynb
+++ b/code_alongs/L11_OOP_basics.ipynb
@@ -518,7 +518,7 @@
     "    # if the customer tries to buy more than available, push back against the customer instead\n",
     "    def purchase(self, amount):\n",
     "    \n",
-    "        if amount <= self.stock:\n",
+    "        if amount <= self.__stock:\n",
     "            self.__stock -= amount    \n",
     "        else:\n",
     "            print(f\"Sorry, but we're unable to proceed with your purchase of {amount} {self.name}'s - we have {self.__stock} available.\")\n",
