--- a/code_alongs/L11_OOP_basics.ipynb
+++ b/code_alongs/L11_OOP_basics.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,13 +533,13 @@
     "                   price        : {self.price}\n",
     "                   brand        : {self.brand}\n",
     "                   expiry       : {self.expiry}\n",
-    "                   stock        : {self.stock}\n",
+    "                   stock        : {self.__stock}\n",
     "                '''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,11 +548,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Information:\n",
+      "                   name         : banana\n",
+      "                   price        : 5\n",
+      "                   brand        : Chichquita\n",
+      "                   expiry       : 2023-10-18\n",
+      "                   stock        : 200\n",
+      "                \n"
+     ]
+    }
+   ],
    "source": [
     "print(banana)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry, but we're unable to proceed with your purchase of 210 banana's - we have 200 available.\n"
+     ]
+    }
+   ],
+   "source": [
+    "banana.purchase(210)"
    ]
   },
   {
@@ -560,9 +591,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "banana.purchase(210)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
